[gd_scene load_steps=3 format=3 uid="uid://b62r6sibq6dpt"]

[ext_resource type="Script" uid="uid://cvyeqii6l0cgh" path="res://levels/level.gd" id="1_80vhd"]
[ext_resource type="AudioStream" uid="uid://tq455hhb777d" path="res://assets/sounds/Alarm0.wav" id="2_hjsbj"]

[node name="Level" type="Node2D"]
script = ExtResource("1_80vhd")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(-2, 8)
color = Color(0, 0, 0, 1)

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 190.0
one_shot = true
autostart = true

[node name="UpdateTimer" type="Timer" parent="."]
autostart = true

[node name="AlarmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hjsbj")
volume_db = -15.0

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_update_timer_timeout"]
